--- a/scripts/feature_engineering/fe_01.ipynb
+++ b/scripts/feature_engineering/fe_01.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +353,7 @@
        "[136 rows x 15 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
        "4                                 0.0          0.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,6 +521,13 @@
     "myproc_counts_long = myproc_counts_long.replace(np.nan,0)\n",
     "#myproc_counts_long = myproc_counts_long.reset_index(drop=True, inplace=True)\n",
     "myproc_counts_long = myproc_counts_long.rename_axis(None).drop(columns=['subject_id'])\n",
+    "\n",
+    "procedure_columns = ['Dialysis', 'Imaging', 'Intubation/Extubation',\n",
+    "       'Invasive Lines', 'Peripheral Lines', 'Procedures',\n",
+    "       'Significant Events', 'Ventilation']\n",
+    "\n",
+    "with open(\"../../crosstables/procedure_list.txt\", \"wb\") as fp:   #Pickling\n",
+    "    pickle.dump(procedure_columns, fp)\n",
     "myproc_counts_long.head()"
    ]
   },
@@ -532,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -700,153 +708,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>286428.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>217724.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>239396.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>238186.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>217992.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>126 rows × 21 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -856,12 +720,6 @@
        "2                    204881.0      0.0     0.0      0.0     0.0      0.0   \n",
        "3                    228977.0      0.0     3.0      5.0     6.0      0.0   \n",
        "4                    277021.0      1.0     0.0      0.0     0.0      0.0   \n",
-       "..                        ...      ...     ...      ...     ...      ...   \n",
-       "121                  286428.0      1.0     0.0      0.0     0.0      0.0   \n",
-       "122                  217724.0      0.0     0.0      0.0     3.0      0.0   \n",
-       "123                  239396.0      1.0     3.0      0.0    11.0      0.0   \n",
-       "124                  238186.0      0.0     0.0      0.0     0.0      0.0   \n",
-       "125                  217992.0      1.0     3.0      0.0     1.0      3.0   \n",
        "\n",
        "formulary_drug_cd  HEPA5I  INSULIN  KCL20P  KCL20PM  ...  LR1000  MAG2PM  \\\n",
        "0                     0.0      0.0     1.0      0.0  ...     0.0     0.0   \n",
@@ -869,12 +727,6 @@
        "2                     0.0      1.0     1.0      0.0  ...     0.0     0.0   \n",
        "3                     0.0      0.0     0.0      1.0  ...     0.0     0.0   \n",
        "4                     1.0      1.0     0.0      0.0  ...     0.0     0.0   \n",
-       "..                    ...      ...     ...      ...  ...     ...     ...   \n",
-       "121                   0.0      1.0     3.0      0.0  ...     1.0     5.0   \n",
-       "122                   1.0      0.0     0.0      0.0  ...     0.0     2.0   \n",
-       "123                   2.0      0.0     1.0      1.0  ...     0.0     1.0   \n",
-       "124                   1.0      1.0     0.0      0.0  ...     0.0     0.0   \n",
-       "125                   2.0      2.0     0.0      1.0  ...     3.0     3.0   \n",
        "\n",
        "formulary_drug_cd  METO25  MORP2I  NACLFLUSH  NS1000  NS250  NS500  VANC1F  \\\n",
        "0                     0.0     0.0        0.0     0.0    0.0    0.0     2.0   \n",
@@ -882,12 +734,6 @@
        "2                     0.0     0.0        1.0     0.0    0.0    1.0     0.0   \n",
        "3                     0.0     0.0        0.0     1.0    0.0    0.0     0.0   \n",
        "4                     2.0     0.0        2.0     0.0    1.0    0.0     0.0   \n",
-       "..                    ...     ...        ...     ...    ...    ...     ...   \n",
-       "121                   0.0     2.0        2.0     4.0    0.0    4.0     0.0   \n",
-       "122                   0.0     0.0        1.0     0.0    0.0    5.0     0.0   \n",
-       "123                   0.0     1.0        0.0     3.0    7.0    4.0     7.0   \n",
-       "124                   0.0     0.0        0.0     1.0    0.0    0.0     0.0   \n",
-       "125                   0.0     0.0        4.0     1.0    2.0    0.0     2.0   \n",
        "\n",
        "formulary_drug_cd  VANCOBASE  \n",
        "0                        2.0  \n",
@@ -895,17 +741,11 @@
        "2                        0.0  \n",
        "3                        0.0  \n",
        "4                        0.0  \n",
-       "..                       ...  \n",
-       "121                      0.0  \n",
-       "122                      0.0  \n",
-       "123                      7.0  \n",
-       "124                      0.0  \n",
-       "125                      2.0  \n",
        "\n",
-       "[126 rows x 21 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +761,13 @@
     "mycounts_long = mycounts.pivot(index = ['subject_id','icustay_id'], \n",
     "                               columns = 'formulary_drug_cd', values = 'counts').reset_index()\n",
     "mycounts_long = mycounts_long.replace(np.nan,0).drop(columns=['subject_id'])\n",
-    "mycounts_long"
+    "prescription_list = ['ACET325', 'CALG1I', 'D5W1000', 'D5W250', 'FURO40I',\n",
+    "       'HEPA5I', 'INSULIN', 'KCL20P', 'KCL20PM', 'KCLBASE2', 'LR1000',\n",
+    "       'MAG2PM', 'METO25', 'MORP2I', 'NACLFLUSH', 'NS1000', 'NS250', 'NS500',\n",
+    "       'VANC1F', 'VANCOBASE']\n",
+    "with open(\"../../crosstables/prescription_list.txt\", \"wb\") as dl:   #Pickling\n",
+    "    pickle.dump(prescription_list, dl)\n",
+    "mycounts_long.head()"
    ]
   },
   {
