--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle"
    ]
   },
   {
@@ -16,9 +17,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load in crosstables: \n",
+    "with open(\"../../crosstables/procedure_list.txt\", \"rb\") as fp:   # Unpickling\n",
+    "    procedure_list = pickle.load(fp)\n",
+    "with open(\"../../crosstables/prescription_list.txt\", \"rb\") as dl:   # Unpickling\n",
+    "    drug_list = pickle.load(dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def feature_eng(admit, icu, proc, drug):\n",
-    "    \"inputs: dataframes (admission, icu, procedures, and prescriptions)\"\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    INPUT: dataframes (admission, icu, procedures, and prescriptions)\n",
+    "    BEHAVIOR: \n",
+    "    OUTPUT:\n",
+    "    \"\"\"    \n",
     "    admit_fields = [\"subject_id\",\"hadm_id\",\"deathtime\", \"admission_type\", \"admission_location\", \n",
     "          \"discharge_location\", \"insurance\", \"diagnosis\", \"hospital_expire_flag\"]\n",
     "    admitdf = pd.read_csv(admit, usecols = admit_fields)\n",
@@ -36,8 +53,7 @@
     "    )\n",
     "    \n",
     "    procdf = pd.read_csv(proc)\n",
-    "    topprocs = procdf['ordercategoryname'].value_counts().head(8).index.tolist()\n",
-    "    procdf = procdf[procdf['ordercategoryname'].isin(topprocs)].reset_index()\n",
+    "    procdf = procdf[procdf['ordercategoryname'].isin(procedure_list)].reset_index()\n",
     "    procdf = procdf[procdf['icustay_id'].notna()]\n",
     "    myproc_counts = procdf.groupby(['subject_id', 'icustay_id', 'ordercategoryname']).size().reset_index(name='counts')\n",
     "    myproc_counts_long = myproc_counts.pivot(index = ['subject_id','icustay_id'], \n",
@@ -47,9 +63,8 @@
     "    myproc_counts_long = myproc_counts_long.rename_axis(None).drop(columns=['subject_id'])\n",
     "\n",
     "    drugdf = pd.read_csv(drug)\n",
-    "    top_twenty = drugdf['formulary_drug_cd'].value_counts().head(20).index.tolist()\n",
     "    #filter rows to only these drugs\n",
-    "    drugdf = drugdf[drugdf['formulary_drug_cd'].isin(top_twenty)].reset_index()\n",
+    "    drugdf = drugdf[drugdf['formulary_drug_cd'].isin(drug_list)].reset_index()\n",
     "    drugdf = drugdf[drugdf['icustay_id'].notna()]\n",
     "    #now start making counts based on person and icu_stay_id\n",
     "    mycounts = drugdf.groupby(['subject_id', 'icustay_id', 'formulary_drug_cd']).size().reset_index(name='counts')\n",
@@ -65,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,17 +285,17 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Unit Testing:\n",
     "procdf = \"https://physionet.org/files/mimiciii-demo/1.4/PROCEDUREEVENTS_MV.csv?download\"\n",
     "drugdf = \"https://physionet.org/files/mimiciii-demo/1.4/PRESCRIPTIONS.csv?download\"\n",
     "admitdf = \"https://physionet.org/files/mimiciii-demo/1.4/ADMISSIONS.csv?download\"\n",
     "icudf = \"https://physionet.org/files/mimiciii-demo/1.4/ICUSTAYS.csv?download\"\n",
-    "\n",
     "testdat = feature_eng(admitdf, icudf, procdf, drugdf)\n",
     "testdat.head()"
    ]
@@ -290,8 +305,7 @@
    "metadata": {},
    "source": [
     "To Do: \n",
-    "- fix NaN values for drugs and procedures \n",
-    "- create a table for top drugs and top procedures. Load these in when running the function. "
+    "- fix NaN values for drugs and procedures "
    ]
   }
  ],
