small changes to function

--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    BEHAVIOR: \n",
     "    OUTPUT:\n",
     "    \"\"\"    \n",
-    "    admit_fields = [\"subject_id\",\"hadm_id\",\"deathtime\", \"admission_type\", \"admission_location\", \n",
+    "    admit_fields = [\"subject_id\",\"hadm_id\", \"admission_type\", \"admission_location\", \n",
     "          \"discharge_location\", \"insurance\", \"diagnosis\", \"hospital_expire_flag\"]\n",
     "    admitdf = pd.read_csv(admit, usecols = admit_fields)\n",
     "    icu_fields =[\"subject_id\", \"hadm_id\", \"icustay_id\", \"first_careunit\", \"last_careunit\",\n",
@@ -80,7 +80,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data files\n",
+    "procdf = \"https://physionet.org/files/mimiciii-demo/1.4/PROCEDUREEVENTS_MV.csv?download\"\n",
+    "drugdf = \"https://physionet.org/files/mimiciii-demo/1.4/PRESCRIPTIONS.csv?download\"\n",
+    "admitdf = \"https://physionet.org/files/mimiciii-demo/1.4/ADMISSIONS.csv?download\"\n",
+    "icudf = \"https://physionet.org/files/mimiciii-demo/1.4/ICUSTAYS.csv?download\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# call data\n",
+    "testdat = feature_eng(admitdf, icudf, procdf, drugdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +127,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>hadm_id</th>\n",
-       "      <th>icustay_id</th>\n",
        "      <th>first_careunit</th>\n",
        "      <th>last_careunit</th>\n",
        "      <th>first_wardid</th>\n",
@@ -114,6 +134,9 @@
        "      <th>los</th>\n",
        "      <th>deathtime</th>\n",
        "      <th>admission_type</th>\n",
+       "      <th>admission_location</th>\n",
+       "      <th>discharge_location</th>\n",
+       "      <th>insurance</th>\n",
        "      <th>...</th>\n",
        "      <th>VANC1F</th>\n",
        "      <th>VANCOBASE</th>\n",
@@ -130,9 +153,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10006</td>\n",
-       "      <td>142345</td>\n",
-       "      <td>206504</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
        "      <td>52</td>\n",
@@ -140,23 +160,23 @@
        "      <td>1.6325</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10011</td>\n",
-       "      <td>105331</td>\n",
-       "      <td>232110</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
        "      <td>15</td>\n",
@@ -164,23 +184,23 @@
        "      <td>13.8507</td>\n",
        "      <td>2126-08-28 18:59:00</td>\n",
        "      <td>EMERGENCY</td>\n",
+       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
+       "      <td>DEAD/EXPIRED</td>\n",
+       "      <td>Private</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10013</td>\n",
-       "      <td>165520</td>\n",
-       "      <td>264446</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
        "      <td>15</td>\n",
@@ -188,23 +208,23 @@
        "      <td>2.6499</td>\n",
        "      <td>2125-10-07 15:13:00</td>\n",
        "      <td>EMERGENCY</td>\n",
+       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
+       "      <td>DEAD/EXPIRED</td>\n",
+       "      <td>Medicare</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10017</td>\n",
-       "      <td>199207</td>\n",
-       "      <td>204881</td>\n",
        "      <td>CCU</td>\n",
        "      <td>CCU</td>\n",
        "      <td>7</td>\n",
@@ -212,23 +232,23 @@
        "      <td>2.1436</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10019</td>\n",
-       "      <td>177759</td>\n",
-       "      <td>228977</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
        "      <td>15</td>\n",
@@ -236,76 +256,77 @@
        "      <td>1.2938</td>\n",
        "      <td>2163-05-15 12:00:00</td>\n",
        "      <td>EMERGENCY</td>\n",
+       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
+       "      <td>DEAD/EXPIRED</td>\n",
+       "      <td>Medicare</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 43 columns</p>\n",
+       "<p>5 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   subject_id  hadm_id  icustay_id first_careunit last_careunit  first_wardid  \\\n",
-       "0       10006   142345      206504           MICU          MICU            52   \n",
-       "1       10011   105331      232110           MICU          MICU            15   \n",
-       "2       10013   165520      264446           MICU          MICU            15   \n",
-       "3       10017   199207      204881            CCU           CCU             7   \n",
-       "4       10019   177759      228977           MICU          MICU            15   \n",
+       "  first_careunit last_careunit  first_wardid  last_wardid      los  \\\n",
+       "0           MICU          MICU            52           52   1.6325   \n",
+       "1           MICU          MICU            15           15  13.8507   \n",
+       "2           MICU          MICU            15           15   2.6499   \n",
+       "3            CCU           CCU             7            7   2.1436   \n",
+       "4           MICU          MICU            15           15   1.2938   \n",
        "\n",
-       "   last_wardid      los            deathtime admission_type  ... VANC1F  \\\n",
-       "0           52   1.6325                  NaN            NaN  ...    2.0   \n",
-       "1           15  13.8507  2126-08-28 18:59:00      EMERGENCY  ...    NaN   \n",
-       "2           15   2.6499  2125-10-07 15:13:00      EMERGENCY  ...    0.0   \n",
-       "3            7   2.1436                  NaN            NaN  ...    0.0   \n",
-       "4           15   1.2938  2163-05-15 12:00:00      EMERGENCY  ...    0.0   \n",
+       "             deathtime admission_type         admission_location  \\\n",
+       "0                  NaN            NaN                        NaN   \n",
+       "1  2126-08-28 18:59:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
+       "2  2125-10-07 15:13:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
+       "3                  NaN            NaN                        NaN   \n",
+       "4  2163-05-15 12:00:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
        "\n",
-       "  VANCOBASE Dialysis Imaging  Intubation/Extubation  Invasive Lines  \\\n",
-       "0       2.0      NaN     NaN                    NaN             NaN   \n",
-       "1       NaN      NaN     NaN                    NaN             NaN   \n",
-       "2       0.0      NaN     NaN                    NaN             NaN   \n",
-       "3       0.0      NaN     NaN                    NaN             NaN   \n",
-       "4       0.0      NaN     NaN                    NaN             NaN   \n",
+       "  discharge_location insurance  ... VANC1F  VANCOBASE  Dialysis  Imaging  \\\n",
+       "0                NaN       NaN  ...    2.0        2.0       0.0      0.0   \n",
+       "1       DEAD/EXPIRED   Private  ...    0.0        0.0       0.0      0.0   \n",
+       "2       DEAD/EXPIRED  Medicare  ...    0.0        0.0       0.0      0.0   \n",
+       "3                NaN       NaN  ...    0.0        0.0       0.0      0.0   \n",
+       "4       DEAD/EXPIRED  Medicare  ...    0.0        0.0       0.0      0.0   \n",
        "\n",
-       "   Peripheral Lines  Procedures  Significant Events  Ventilation  \n",
-       "0               NaN         NaN                 NaN          NaN  \n",
-       "1               NaN         NaN                 NaN          NaN  \n",
-       "2               NaN         NaN                 NaN          NaN  \n",
-       "3               NaN         NaN                 NaN          NaN  \n",
-       "4               NaN         NaN                 NaN          NaN  \n",
+       "   Intubation/Extubation  Invasive Lines  Peripheral Lines  Procedures  \\\n",
+       "0                    0.0             0.0               0.0         0.0   \n",
+       "1                    0.0             0.0               0.0         0.0   \n",
+       "2                    0.0             0.0               0.0         0.0   \n",
+       "3                    0.0             0.0               0.0         0.0   \n",
+       "4                    0.0             0.0               0.0         0.0   \n",
        "\n",
-       "[5 rows x 43 columns]"
+       "   Significant Events  Ventilation  \n",
+       "0                 0.0          0.0  \n",
+       "1                 0.0          0.0  \n",
+       "2                 0.0          0.0  \n",
+       "3                 0.0          0.0  \n",
+       "4                 0.0          0.0  \n",
+       "\n",
+       "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Unit Testing:\n",
-    "procdf = \"https://physionet.org/files/mimiciii-demo/1.4/PROCEDUREEVENTS_MV.csv?download\"\n",
-    "drugdf = \"https://physionet.org/files/mimiciii-demo/1.4/PRESCRIPTIONS.csv?download\"\n",
-    "admitdf = \"https://physionet.org/files/mimiciii-demo/1.4/ADMISSIONS.csv?download\"\n",
-    "icudf = \"https://physionet.org/files/mimiciii-demo/1.4/ICUSTAYS.csv?download\"\n",
-    "testdat = feature_eng(admitdf, icudf, procdf, drugdf)\n",
-    "testdat.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To Do: \n",
-    "- fix NaN values for drugs and procedures "
+    "# convert nas in specific columns to 0\n",
+    "testdat[procedure_list] = testdat[procedure_list].fillna(0)\n",
+    "testdat[drug_list] = testdat[drug_list].fillna(0)\n",
+    "# drop columns\n",
+    "dat = testdat.drop(columns=['subject_id', 'hadm_id', 'icustay_id'])\n",
+    "dat.head()"
    ]
   }
  ],
