FE and modeling

--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,230 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first_careunit</th>\n",
-       "      <th>last_careunit</th>\n",
-       "      <th>first_wardid</th>\n",
-       "      <th>last_wardid</th>\n",
-       "      <th>los</th>\n",
-       "      <th>deathtime</th>\n",
-       "      <th>admission_type</th>\n",
-       "      <th>admission_location</th>\n",
-       "      <th>discharge_location</th>\n",
-       "      <th>insurance</th>\n",
-       "      <th>...</th>\n",
-       "      <th>VANC1F</th>\n",
-       "      <th>VANCOBASE</th>\n",
-       "      <th>Dialysis</th>\n",
-       "      <th>Imaging</th>\n",
-       "      <th>Intubation/Extubation</th>\n",
-       "      <th>Invasive Lines</th>\n",
-       "      <th>Peripheral Lines</th>\n",
-       "      <th>Procedures</th>\n",
-       "      <th>Significant Events</th>\n",
-       "      <th>Ventilation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MICU</td>\n",
-       "      <td>MICU</td>\n",
-       "      <td>52</td>\n",
-       "      <td>52</td>\n",
-       "      <td>1.6325</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MICU</td>\n",
-       "      <td>MICU</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>13.8507</td>\n",
-       "      <td>2126-08-28 18:59:00</td>\n",
-       "      <td>EMERGENCY</td>\n",
-       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
-       "      <td>DEAD/EXPIRED</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MICU</td>\n",
-       "      <td>MICU</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2.6499</td>\n",
-       "      <td>2125-10-07 15:13:00</td>\n",
-       "      <td>EMERGENCY</td>\n",
-       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
-       "      <td>DEAD/EXPIRED</td>\n",
-       "      <td>Medicare</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CCU</td>\n",
-       "      <td>CCU</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.1436</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MICU</td>\n",
-       "      <td>MICU</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1.2938</td>\n",
-       "      <td>2163-05-15 12:00:00</td>\n",
-       "      <td>EMERGENCY</td>\n",
-       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
-       "      <td>DEAD/EXPIRED</td>\n",
-       "      <td>Medicare</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  first_careunit last_careunit  first_wardid  last_wardid      los  \\\n",
-       "0           MICU          MICU            52           52   1.6325   \n",
-       "1           MICU          MICU            15           15  13.8507   \n",
-       "2           MICU          MICU            15           15   2.6499   \n",
-       "3            CCU           CCU             7            7   2.1436   \n",
-       "4           MICU          MICU            15           15   1.2938   \n",
-       "\n",
-       "             deathtime admission_type         admission_location  \\\n",
-       "0                  NaN            NaN                        NaN   \n",
-       "1  2126-08-28 18:59:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
-       "2  2125-10-07 15:13:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
-       "3                  NaN            NaN                        NaN   \n",
-       "4  2163-05-15 12:00:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
-       "\n",
-       "  discharge_location insurance  ... VANC1F  VANCOBASE  Dialysis  Imaging  \\\n",
-       "0                NaN       NaN  ...    2.0        2.0       0.0      0.0   \n",
-       "1       DEAD/EXPIRED   Private  ...    0.0        0.0       0.0      0.0   \n",
-       "2       DEAD/EXPIRED  Medicare  ...    0.0        0.0       0.0      0.0   \n",
-       "3                NaN       NaN  ...    0.0        0.0       0.0      0.0   \n",
-       "4       DEAD/EXPIRED  Medicare  ...    0.0        0.0       0.0      0.0   \n",
-       "\n",
-       "   Intubation/Extubation  Invasive Lines  Peripheral Lines  Procedures  \\\n",
-       "0                    0.0             0.0               0.0         0.0   \n",
-       "1                    0.0             0.0               0.0         0.0   \n",
-       "2                    0.0             0.0               0.0         0.0   \n",
-       "3                    0.0             0.0               0.0         0.0   \n",
-       "4                    0.0             0.0               0.0         0.0   \n",
-       "\n",
-       "   Significant Events  Ventilation  \n",
-       "0                 0.0          0.0  \n",
-       "1                 0.0          0.0  \n",
-       "2                 0.0          0.0  \n",
-       "3                 0.0          0.0  \n",
-       "4                 0.0          0.0  \n",
-       "\n",
-       "[5 rows x 40 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert nas in specific columns to 0\n",
     "testdat[procedure_list] = testdat[procedure_list].fillna(0)\n",
     "testdat[drug_list] = testdat[drug_list].fillna(0)\n",
     "# drop columns\n",
     "dat = testdat.drop(columns=['subject_id', 'hadm_id', 'icustay_id'])\n",
-    "dat.head()"
+    "####PICKLE THE DATA \n",
+    "#dat.to_pickle(\"../modeling/demo_training.pkl\") "
    ]
   }
  ],
